--- a/src/components/user/user-menu-container.scss
+++ b/src/components/user/user-menu-container.scss
@@ -1,4 +1,7 @@
 .user-menu-container {
   grid-column: 1/4;
   background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
