--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -6,8 +6,16 @@
 .hover-menu {
   display: flex;
   position: absolute;
+  font-size: 1.5em;
   div {
     margin-left: 1em;
   }
   background-color: red;
+
+  align-items: center;
+
+  right: 0;
+  bottom: 0;
+  height: 1.5em;
+  width: fit-content;
 }
