--- a/src/components/user/child/child-user.scss
+++ b/src/components/user/child/child-user.scss
@@ -1,5 +1,7 @@
-.child-container {
+.child-user-container {
   background-color: green;
   border: 1px solid black;
   color: white;
+  padding: 0.2em;
+  margin: 0.2em;
 }
