--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -1,4 +1,16 @@
 .posts-container {
   grid-column: 4/13;
-  background-color: aquamarine;
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-box {
+  height: 2em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding-left: 0.5em;
+  &:focus {
+    outline-color: rgb(137, 209, 219);
+  }
 }
