--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,8 +1,9 @@
 .post-container {
   padding: 2.5em 0.5em;
   margin-top: 1em;
-  background-color: aquamarine;
+  background-color: cadetblue;
   border-radius: 10px;
+  font-size: 1.2em;
 }
 
 .post-ul {
