update desktop layout

--- a/src/components/user/user-menu-container.scss
+++ b/src/components/user/user-menu-container.scss
@@ -4,5 +4,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 1em;
+  padding: 0.2em;
+  padding-bottom: 1em;
+}
+
+@media screen and (min-width: 500px) {
+  .user-menu-container {
+    padding-bottom: 5em;
+  }
 }
