--- a/src/components/PostContainer/posts/posts.scss
+++ b/src/components/PostContainer/posts/posts.scss
@@ -3,6 +3,8 @@
   margin: 1em;
   display: flex;
   flex-direction: column;
+  padding-bottom: 1em;
+  font-size: 0.8em;
 }
 
 .search-box {
@@ -12,5 +14,22 @@
   padding-left: 0.5em;
   &:focus {
     outline-color: rgb(137, 209, 219);
+  }
+}
+
+.save-button {
+  width: 35%;
+  height: 2em;
+}
+
+@media screen and (min-width: 500px) {
+  .posts-container {
+    padding-bottom: 5em;
+    font-size: 1em;
+  }
+
+  .save-button {
+    width: 15%;
+    height: 2em;
   }
 }
