--- a/src/components/PostContainer/posts/posts.scss
+++ b/src/components/PostContainer/posts/posts.scss
@@ -1,3 +1,5 @@
+$search-box-outline: rgb(137, 209, 219);
+
 .posts-container {
   grid-column: 4/13;
   margin: 1em;
@@ -13,7 +15,7 @@
   border-radius: 5px;
   padding-left: 0.5em;
   &:focus {
-    outline-color: rgb(137, 209, 219);
+    outline-color: $search-box-outline;
   }
 }
 
