--- a/src/components/user/child/child-user.scss
+++ b/src/components/user/child/child-user.scss
@@ -1,4 +1,5 @@
 $hover-color: rgb(56, 173, 194);
+$focus-bg-color: rgb(44, 166, 170);
 $child-bg-color: rgb(29, 110, 124);
 
 .child-user-container {
@@ -13,6 +14,11 @@ $child-bg-color: rgb(29, 110, 124);
   font-size: 0.8em;
   min-height: 3em;
 
+  &:focus {
+    border-width: 0;
+    outline: none;
+    background-color: $focus-bg-color;
+  }
   &:hover {
     background-color: $hover-color;
     color: #222;
