--- a/src/components/user/user-menu-container.scss
+++ b/src/components/user/user-menu-container.scss
@@ -1,6 +1,6 @@
 .user-menu-container {
   grid-column: 1/4;
-  background-color: bisque;
+  background-color: #222;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -10,6 +10,6 @@
 
 @media screen and (min-width: 500px) {
   .user-menu-container {
-    padding-bottom: 5em;
+    padding: 1em 2em 5em 1em;
   }
 }
