--- a/src/components/PostContainer/posts/posts.scss
+++ b/src/components/PostContainer/posts/posts.scss
@@ -8,6 +8,7 @@ $search-box-outline: rgb(105, 201, 214);
   padding-bottom: 1em;
   font-size: 0.8em;
   background-color: #333;
+  font-family: 'Open Sans';
 }
 
 .search-box {
