--- a/src/components/user/child/child-user.scss
+++ b/src/components/user/child/child-user.scss
@@ -13,6 +13,7 @@ $child-bg-color: rgb(48, 76, 167);
   padding-left: 0.5em;
   font-size: 0.8em;
   min-height: 3em;
+  font-family: 'Roboto';
 
   &:focus {
     border-width: 0;
