--- a/src/components/PostContainer/post/post.scss
+++ b/src/components/PostContainer/post/post.scss
@@ -1,4 +1,18 @@
+$search-box-outline: rgb(105, 201, 214);
+
 .post-container {
   padding: 2em 0.3em;
   margin-top: 1em;
+}
+
+.search-box {
+  margin-left: 1em;
+  height: 2em;
+  border: none;
+  border-radius: 5px;
+  border-width: 0;
+  padding-left: 0.5em;
+  &:focus {
+    outline-color: $search-box-outline;
+  }
 }
