--- a/src/components/PostContainer/single-post/single-post.scss
+++ b/src/components/PostContainer/single-post/single-post.scss
@@ -10,3 +10,19 @@ $post-bg-color: rgb(187, 106, 53);
   border-radius: 5px;
   font-size: 1em;
 }
+
+.single-post-title {
+  text-transform: uppercase;
+  font-size: 1em;
+  padding-bottom: 1em;
+  &::first-letter {
+    font-size: 2em;
+  }
+}
+.single-post-body {
+  font-size: 0.9em;
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
+}
