--- a/src/components/PostContainer/post/post.scss
+++ b/src/components/PostContainer/post/post.scss
@@ -6,12 +6,12 @@ $search-box-outline: rgb(105, 201, 214);
 }
 
 .search-box {
-  margin-left: 1em;
   height: 2em;
   border: none;
   border-radius: 5px;
   border-width: 0;
   padding-left: 0.5em;
+  width: 100%;
   &:focus {
     outline-color: $search-box-outline;
   }
