--- a/src/components/PostContainer/hover-menu/modal/modal.scss
+++ b/src/components/PostContainer/hover-menu/modal/modal.scss
@@ -8,13 +8,23 @@
 }
 
 .modal-container {
+  position: fixed;
   display: flex;
-
+  width: 100%;
   ul {
     background-color: orangered;
+    position: absolute;
     margin: 0em 5em;
     padding: 5em 1em;
     border-radius: 1em;
-    min-width: 50vw;
+    min-width: 70vw;
+    top: 20vh;
   }
+}
+
+.close-button {
+  position: fixed;
+  top: 20vh;
+  z-index: 10;
+  margin-left: 90%;
 }
