--- a/src/components/PostContainer/hover-menu/modal/modal.scss
+++ b/src/components/PostContainer/hover-menu/modal/modal.scss
@@ -11,13 +11,15 @@
   position: fixed;
   display: flex;
   width: 100%;
+
   ul {
     background-color: orangered;
     position: relative;
-    margin: 1em;
+    margin: 5em;
     padding: 5em 1em;
     border-radius: 1em;
-    min-width: 80vw;
+    min-width: 75vw;
+    width: 90%;
     top: 20vh;
   }
 }
