--- a/src/components/PostContainer/hover-menu/details-modal/details-modal.scss
+++ b/src/components/PostContainer/hover-menu/details-modal/details-modal.scss
@@ -13,7 +13,7 @@
   width: 100%;
 
   ul {
-    background-color: orangered;
+    background-color: rgb(219, 144, 46);
     position: relative;
     margin: 5em;
     padding: 5em 1em;
@@ -22,6 +22,19 @@
     width: 90%;
     top: 20vh;
   }
+}
+
+.details-modal-header {
+  top: 0;
+  left: 30%;
+  font-size: 2em;
+  position: absolute;
+}
+
+.modal-title {
+  font-size: 1.2em;
+  margin-bottom: 1em;
+  text-transform: uppercase;
 }
 
 .close-button {
@@ -36,4 +49,12 @@
   border-radius: 5px;
   color: white;
   border: none;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 500px) {
+  .details-modal-header {
+    left: 40%;
+    font-size: 3em;
+  }
 }
